--- a/Applied Sciences Research Center Website/wwwroot/css/home.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/home.css
@@ -69,10 +69,24 @@
         display: inline-block;
         margin: 5px 10px;
     }
+.navbar-second .navbar-brand {
+    display: none;
+}
 
     @media (max-width: 768px) {
+    .navbar-second .navbar-brand {
+            display: block;
+        }
         .navbar-second {
-            display: none;
+                background-color: #F8F9FA;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 1px 4px rgba(0, 0, 0, 0.05);
+                margin: 20px 0;
+            }
+        .nav-link.active {
+            font-weight: bold;
+            color: #6C757D;
+            border-bottom: 2px solid #6C757D;
         }
     }
 
@@ -165,8 +179,20 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 1px 4px rgba(0, 0, 0, 0.05);
     }
 
-    .nav-link.active {
-        font-weight: bold;
-        color: var(--primary-dark);
-        border-bottom: 2px solid var(--primary-dark);
-    }
+   .nav-link.active {
+       font-weight: bold;
+       color: #6C757D;
+       border-bottom: 2px solid #6C757D;
+   }
+
+
+         .contact-us-section {
+             background-color: #F8F9FA;
+             /* Matches the research background */
+             border-radius: 10px;
+             /* Rounded corners */
+             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 1px 4px rgba(0, 0, 0, 0.05);
+             /* Depth effect */
+             padding: 30px;
+             margin-top: 40px;
+         }
