--- a/Applied Sciences Research Center Website/wwwroot/css/login.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/login.css
@@ -40,7 +40,7 @@ body {
 }
 
 /* Custom Button */
-.custom-button {
+#custom-button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
