--- a/Applied Sciences Research Center Website/wwwroot/css/home.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/home.css
@@ -55,7 +55,7 @@ body {
     border-radius: 20px;
 }
 
-.navbar-second {
+#navbar-second {
     background-color: var(--secondary-light);
     border-radius: 20px;
     padding: 10px 20px;
@@ -66,22 +66,22 @@ body {
     text-align: center;
 }
 
-.navbar-second .nav-link {
+#navbar-second .nav-link {
     color: var(--primary-dark) !important;
     display: inline-block;
     margin: 5px 10px;
 }
 
-.navbar-second .navbar-brand {
+#navbar-second .navbar-brand {
     display: none;
 }
 
 @media (max-width: 768px) {
-    .navbar-second .navbar-brand {
+    #navbar-second .navbar-brand {
         display: block;
     }
 
-    .navbar-second {
+    #navbar-second {
         background-color: #F8F9FA;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 1px 4px rgba(0, 0, 0, 0.05);
@@ -95,7 +95,7 @@ body {
     }
 }
 
-.navbar-second .nav-link.active {
+#navbar-second .nav-link.active {
     font-weight: bold;
     color: var(--primary-dark);
     border-bottom: 2px solid var(--primary-dark);
