--- a/Applied Sciences Research Center Website/wwwroot/css/style.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/style.css
@@ -1,6 +1,17 @@
-﻿.bg-secondary3-800 {
-    background-color: #f3f0ec;
+﻿:root {
+    --primary-light: #E9ECEF;
+    --secondary-light: #F8F9FA;
+    --accent: #CED4DA;
+    --primary-dark: #6C757D;
+    --research-bg: #F8F9FA;
 }
+
+body {
+    font-family: 'Inter', sans-serif;
+    background-color: var(--primary-light);
+    padding: 20px;
+}
+
 #signup-button {
     border-color: transparent;
     border-radius: 15px;
