Frontend: Code cleanup and improvements

--- a/Applied Sciences Research Center Website/wwwroot/css/style.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/style.css
@@ -31,3 +31,24 @@ body {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
+
+#dropdownMenuButton {
+    background-color: transparent;
+    border-color: transparent;
+    border-radius: 15px;
+    padding: 10px 30px;
+    width: 20px;
+    height: auto;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, background-color 0.3s, box-shadow 0.3s;
+}
+
+    #dropdownMenuButton:hover {
+        background-color: var(--accent);
+        transform: scale(1.05);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    }
