--- a/Applied Sciences Research Center Website/wwwroot/css/style.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/style.css
@@ -1,5 +1,6 @@
 ﻿:root {
-    --primary-light: #E9ECEF;
+    /* --primary-light: #E9ECEF; */
+    --primary-light: #fcf6f3;
     --secondary-light: #F8F9FA;
     --accent: #CED4DA;
     --primary-dark: #6C757D;
@@ -26,11 +27,11 @@ body {
     transition: transform 0.3s, background-color 0.3s, box-shadow 0.3s;
 }
 
-    #signup-button:hover {
-        background-color: var(--accent);
-        transform: scale(1.05);
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    }
+#signup-button:hover {
+    background-color: var(--accent);
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
 
 #dropdownMenuButton {
     background-color: transparent;
@@ -91,4 +92,74 @@ body {
     z-index: 10;
     top: 10px;
     right: 10px;
+}
+
+.card-title {
+    color: #333;
+    font-weight: bold;
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 25px;
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.min-w-\[148px\] {
+    min-width: 148px;
+}
+
+.rounded-full {
+    border-radius: 9999px;
+}
+
+.bg-black {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.font-semibold {
+    font-weight: 600;
+}
+
+.leading-5 {
+    line-height: 1.25rem;
+}
+
+.tracking-\[0\.8px\] {
+    letter-spacing: .8px;
+}
+
+/**/
+.text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.\!ring-offset-primary-600 {
+    --tw-ring-offset-color: hsla(259, 74%, 79%, 1) !important;
+}
+
+.transition-all {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    transition-duration: .15s;
+}
+
+.hover\:bg-primary-400:hover {
+    background-color: #6935e3;
+}
+
+.focus\:ring-2:focus {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.active\:bg-primary-300:active {
+    background-color: #501ebe;
 }
