--- a/Applied Sciences Research Center Website/wwwroot/css/journal.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/journal.css
@@ -3,7 +3,7 @@
     list-style-type: none;
     margin: 0;
     overflow: hidden;
-    border-radius: 30px;
+    border-radius: 24px;
     max-width: 1200px;
     margin: 0 auto;
     padding: 10px;
@@ -27,7 +27,7 @@ li a:hover:not(.active) {
 
 .newsletter-section {
     background-color: white;
-    border-radius: 30px;
+    border-radius: 24px;
     padding: 30px 40px;
     max-width: 900px;
     margin: 50px auto;
@@ -53,7 +53,7 @@ li a:hover:not(.active) {
     width: 100%;
     padding: 12px 100px 12px 20px;
     border: 1px solid #ddd;
-    border-radius: 25px;
+    border-radius: 24px;
     font-size: 16px;
     color: #555;
     background-color: #f9f9f9;
@@ -75,7 +75,7 @@ li a:hover:not(.active) {
     background: linear-gradient(to right, #ff7e5f, #ff6347);
     color: white;
     border: none;
-    border-radius: 25px;
+    border-radius: 24px;
     padding: 10px 20px;
     font-size: 14px;
     font-weight: bold;
@@ -102,8 +102,16 @@ li a:hover:not(.active) {
 }
 
 .blog-card img {
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+    aspect-ratio: 1968 / 1318;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    transition-duration: .15s;
+}
+
+.blog-card img:hover {
+    transform: scale(1.1);
 }
 
 .blog-card {
@@ -118,6 +126,7 @@ li a:hover:not(.active) {
 }
 
 .blog-tag {
+    display: block;
     font-size: 12px;
     font-weight: bold;
     text-transform: uppercase;
@@ -167,16 +176,15 @@ li a:hover:not(.active) {
 .input-group {
     display: flex;
     align-items: center;
-    border-radius: 25px;
+    border-radius: 24px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    background: white;
 }
 
 .search-icon {
     cursor: pointer;
     padding: 0.5rem;
-    background-color: white;
+    background-color: transparent;
     border: none;
     display: flex;
     align-items: center;
@@ -199,6 +207,32 @@ li a:hover:not(.active) {
     opacity: 1;
 }
 
+.search-icon.expanded {
+    background-color: white;
+}
+
 .search-bar::placeholder {
     color: #6c757d;
+}
+
+.underline-hover {
+    position: relative;
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.underline-hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: black;
+    transition: width 0.3s ease;
+}
+
+.underline-hover:hover::after {
+    width: 100%;
 }
