--- a/Applied Sciences Research Center Website/wwwroot/css/journal.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/journal.css
@@ -1,12 +1,10 @@
 .navbar-custom {
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
     list-style-type: none;
-    margin: 0;
     overflow: hidden;
     border-radius: 24px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 10px;
+    justify-content: space-between;
+    padding-top: 10px;
 }
 
 li {
@@ -119,10 +117,12 @@ li a:hover:not(.active) {
     border-radius: 30px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
+    /* z-index: 90; */
 }
 
 .blog-card:hover {
     transform: translateY(-5px);
+    z-index: 10;
 }
 
 .blog-tag {
@@ -177,24 +177,16 @@ li a:hover:not(.active) {
     display: flex;
     align-items: center;
     border-radius: 24px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
 
 .search-icon {
     cursor: pointer;
-    padding: 0.5rem;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     transition: all 0.3s ease;
 }
 
 .search-bar {
     width: 0;
-    padding: 0.5rem;
     border: none;
     outline: none;
     opacity: 0;
