--- a/Applied Sciences Research Center Website/wwwroot/css/journal.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/journal.css
@@ -1,5 +1,4 @@
 .navbar-custom {
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
     list-style-type: none;
     overflow: hidden;
     border-radius: 24px;
@@ -92,7 +91,7 @@ li a:hover:not(.active) {
     color: white;
 }
 
-.input-container {
+.input-container-newsletter {
     margin: 0;
     color: transparent;
     position: relative;
@@ -103,9 +102,10 @@ li a:hover:not(.active) {
     border-top-left-radius: 24px;
     border-top-right-radius: 24px;
     aspect-ratio: 1968 / 1318;
-    transition-property: all;
-    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-    transition-duration: .15s;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease
 }
 
 .blog-card img:hover {
@@ -114,15 +114,14 @@ li a:hover:not(.active) {
 
 .blog-card {
     border: 0;
-    border-radius: 30px;
+    border-radius: 24px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
-    /* z-index: 90; */
+    overflow: hidden;
 }
 
 .blog-card:hover {
     transform: translateY(-5px);
-    z-index: 10;
 }
 
 .blog-tag {
