frontend: contact page updated
contact section moved to home page and its css to style.css

--- a/Applied Sciences Research Center Website/wwwroot/css/style.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/style.css
@@ -163,3 +163,14 @@ body {
 .active\:bg-primary-300:active {
     background-color: #501ebe;
 }
+
+.contact-us-section {
+    border: 1px solid #ccc;
+    background-color: var(--research-bg);
+    border-radius: 30px;
+    position: relative;
+    background-color: #fff;
+    margin: 20px 0;
+    padding: 50px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 1px 4px rgba(0, 0, 0, 0.05);
+}
