--- a/Applied Sciences Research Center Website/wwwroot/css/style.css
+++ b/Applied Sciences Research Center Website/wwwroot/css/style.css
@@ -33,7 +33,7 @@ body {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-#dropdownMenuButton {
+/*#dropdownMenuButton {
     background-color: transparent;
     border-color: transparent;
     border-radius: 15px;
@@ -53,7 +53,7 @@ body {
     background-color: var(--accent);
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-}
+}*/
 
 .navbar {
     background-color: rgba(248, 249, 250, 0.7);
